Fixing spacing for text and an image

--- a/css/gazer.css
+++ b/css/gazer.css
@@ -175,7 +175,7 @@
 }
 
 .gazerh3.aff {
-  margin-top: 60px;
+  margin-top: 30px;
   margin-bottom: 20px;
   font-family: synthese, sans-serif;
   color: #000;
@@ -400,7 +400,7 @@
 }
 
 .div-block-114 {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 
 .ia {
@@ -450,7 +450,7 @@
 }
 
 .challenges {
-  margin-bottom: 60px;
+  margin-bottom: 30px;
 }
 
 .footer {
